successfully load course and assignment